--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -1,4 +1,5 @@
 #content {transition: all 0.3s;}
-#content dd {margin-left: 1em;}
 thead td {font-weight: bold;}
-.site-params dt {font-weight: bold; font-style: italic;}
+.tooltip-section:not(:first-of-type) {margin-top: 1em;}
+.tooltip-key {font-weight: bold; font-style: italic;}
+.monospace {font-family: roboto; background-color: #eee;}
