Check sites according to a CRON schedule
Includes:
* Evaluating CRON expression using a utility class from Spring framework.
* Per-website and global CRON schedule and a timezone.
* Showing the CRON schedule in the web front-end.

--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -2,4 +2,5 @@
 thead td {font-weight: bold;}
 .tooltip-section:not(:first-of-type) {margin-top: 1em;}
 .tooltip-key {font-weight: bold; font-style: italic;}
-.monospace {font-family: roboto; background-color: #eee;}
+.monospace {font-family: monospace; background-color: #eee; padding: 4px; border-radius: 4px;}
+.v-margin {margin-top: 8px; margin-bottom: 8px;}
