Upgrade Bootstrap 3 to Bootstrap 5
Includes:
* Bootstrap Popover properties renamed from `data-*` to `data-bs-*`.
* CSS icon classes "glyphicon-*" replaced by "bi-*" classes.

--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -28,5 +28,5 @@ thead td {
 }
 
 .popover {
-  max-width: 80%; /* Relative to the table of checked sites. */
+  max-width: 80% !important; /* Relative to the table of checked sites. */
 }
