Visualise the site  state in the web UI with icons

--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -31,3 +31,17 @@ body {
 .popover {
   max-width: 80% !important; /* Relative to the table of checked sites. */
 }
+
+.spinning {
+  display: inline-block; /* Required for the animation to work. */
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
